<resources>
    <string name="app_name">APC Demo App</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="generate">Generate &amp; Register Key Pair</string>
    <string name="back_button">Back</string>
    <string name="register_fragment_label">Generate APC Key Pair</string>
    <string name="hpc_fragment_label">APC Demo App</string>
    <string name="confirm">Start Trusted Confirmation</string>
    <string name="check_key">Check Key</string>
    <string name="action_check_key">Check APC Key</string>
    <string name="action_check_key_store">Check Key Store</string>
    <string name="empty">-</string>
    <string name="show_cert">Show APC Certificate</string>
    <string name="cert_validity_days">Number of days the certificate is valid</string>
    <string name="cert_validity">Validity period of the certificate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_key_store">Key Store</string>
    <string name="title_voting_cert">APC Certificate</string>
    <string name="question">Poll\u00A0</string>
    <string name="we_have_questions">\nWe have %d questions for you."</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="certificate_settings">Certificate Settings</string>
    <string name="preferences">ch.bfh.securevote_preferences</string>
    <string name="attestation_key_alisa">Attestation key alias</string>
    <string name="form_given_name_desc">Please provide your given name for the registration.</string>
    <string name="form_given_name">Please enter your given name</string>
    <string name="form_name">Please enter your name</string>
    <string name="delete">Delete</string>
    <string name="issued_to">Issued to</string>
    <string name="common_name">Common Name</string>
    <string name="org_name">Organization</string>
    <string name="org_unit">Organizational unit</string>
    <string name="serial_number">Serial number</string>
    <string name="issued_by">Issued by</string>
    <string name="validity_period">Validity period</string>
    <string name="issued_on">Issued on</string>
    <string name="expires_on">Expires on</string>
    <string name="fingerprints">Fingerprints:</string>
    <string name="sha256_fingerprint">SHA-256 fingerprint</string>
    <string name="sha1_fingerprint">SHA-1 fingerprint</string>
    <string name="key_specs">Key specifications</string>
    <string name="key_alg">Algorithm:</string>
    <string name="key_size">Size:</string>
    <string name="pub_modulus">Public modulus</string>
    <string name="pub_exponent">Public exponent</string>
    <string name="key_usage">Key usage</string>
    <string name="x509_version">X509 version</string>
    <string name="alias">Alias</string>
    <string name="subject">Subject name</string>
    <string name="issuer_subject">Issuer name</string>
    <string name="verified_by">Verified by</string>
    <string name="sig_alg">Signature Algorithm</string>
    <string name="signature">Signature</string>
    <string name="cn_self_signed_suffix">\t\t(Self-Signed)</string>
    <string name="no_valid_issuer_error_msg">Cannot find valid issuer.</string>
    <string name="EC">EC</string>
    <string name="elliptic_curve">Elliptic Curve</string>
    <string name="inspect_tls_cert_from_url">Inspect TLS Cert From URL</string>
    <string name="alias_header_tls_inspection">Certificate Validity\n(Not validated against CRL/OCSP)</string>
    <string name="cert_valid">Certificate is valid.</string>
    <string name="cert_expired">Certificate is expired.</string>
    <string name="cert_invalid">Certificate is invalid.</string>
    <string name="cert_not_trusted">Certificate is not trusted.</string>
    <string name="url_hint">https://www.google.com</string>
    <string name="tls_title">TLS Certificate Inspection</string>
    <string name="tls_message">Enter URL to inspect certificate:</string>
    <string name="tls_cancel">Cancel</string>
    <string name="copied">The certificate details have been copied to the clipboard.</string>
    <string name="tls_check_cert">Check Certificate</string>
    <string name="error">Error</string>
    <string name="tls_error_empty_url">Please enter a URL</string>
    <string name="tls_error_invalid_url">Invalid URL</string>
    <string name="tls_error_http">URL must be HTTPS protocol.</string>
    <string name="error_msg_retrieve_store">Error occurred in retrieving certificate from store.</string>
    <string name="tip_lock_screen">You may be prompted to enable a lock screen. This is because Android wants to protect your cryptographic keys from unauthorized users.</string>
    <string name="tip_issuer_cert">If an issuer certificate is present, you\'ll be able to see its details as well!</string>
    <string name="tip_file">You can inspect certificates from a local file too. This is helpful for inspecting a certificate prior to installing it. P12, PFX and PEM format certificate files are supported.</string>
    <string name="tip_tls">Inspect a website\'s TLS certificate by typing in the URL.</string>
    <string name="error_retrieve_cert">Unable to retrieve certificate.</string>
    <string name="fingerprint_calc_error">Error calculating fingerprint</string>
    <string name="keystore_settings">Key Store Setting</string>
    <string name="certificate">Certificate:</string>
    <string name="validity">Validity</string>
    <string name="key_already_generated">A key pair has already been generated. Delete it first to generate a new one.</string>
    <string name="gen_key">Provide your name and click register to generate a new key pair.</string>
    <string name="provide_name">Please provide your name to register.</string>
    <string name="email_for_registration">Please provide your email for the registration.</string>
    <string name="key_generated">The APC key pair was successfully generated.</string>
    <string name="key_generation_failed">The APC key pair generation failed.</string>
    <string name="please_vote">Please participate at our poll. Select your answer and press the Confirm button.</string>
    <string name="signing_failed">Failed to sign message.</string>
    <string name="successfully_signed">"Successfully signed message: "</string>
    <string name="key_name">Please enter your preferred key name.</string>
    <string name="register_first">Please register a key for the trusted confirmation.</string>
    <string name="plain_sign">Make a plain signature</string>
    <string name="description_key_gen">Generate &amp; register your key pair for "Android Protected Confirmation". This is a critical operation as you normally want to bind an identity to the highly protected hardware based key pair. In this demo case, the server is sending a challenge (UUID see below) to the device. We assume the "attestation challenge" is transferred in a securely end-to-end encrypted and authenticated channel. It will be included in the attestaton certificate. It serves as reference of the key generation context (preventing replay attacks). Note that next to "Protected Confirmation" you can require in addition biometric authentication for any key operation.</string>
    <string name="key_in_hw">Keys in Hardware (Strong Box)</string>
    <string name="biometric_auth">The user has to authenticate for each key operation.</string>
    <string name="device_unlocked">The device has to be unlocked for any key operation.</string>
    <string name="key_for_apc">Keys can only be used with Android Protected Confirmation. (This has always to be set to true.)</string>
    <string name="welcome">"Start \"Protected Confirmation\" by confirming the questions below. Thanks for participating!"</string>
    <string name="must_set_apc">The flag \"Trusted Confirmation Required\" must be set to \"true\".</string>
    <string name="we_have_already_a_key">There is already a key. If you want to generate a new key, delete the old key first.</string>
    <string name="server_challenge">Attestation challenge (reflected in the APC certificate):</string>
    <string name="key_settings">Key Settings</string>
    <string name="select_ec_type">Select EC Type</string>
    <string name="select_key_type">Select the key type</string>
    <string name="select_rsa_key_length">Select the RSA key length</string>
    <string name="key_store">Key Store</string>
    <string name="key_attributes">Key Attribute</string>
    <string name="key_type">Key Type</string>
    <string name="rsa_key_length">RSA Key Length</string>
    <string name="authentication">Authentication</string>
    <string name="key_alias">Key Alias</string>
    <string name="about">About</string>
    <string name="given_name_hint">Please enter your given name.</string>
    <string name="surname_hint">Please enter your surname.</string>
    <string name="email_hint">Please enter your email address.</string>
    <string name="company_name_hint">Please enter the name of your company.</string>
    <string name="send_apc">Send Confirmed Message</string>
    <string name="join_alliance">Register For APC News</string>
    <string name="please_join">From a technical point of view, most mobile devices these days could offer support for APC. However, only few devices implemented this \"optional\" Android feature so far. We want to overcome this \"chicken or egg\" situation, where apps don\'t use APC due to the small market share and OEM’s don\'t implement APC due to marginal usage.</string>
    <string name="description_sign_free_text">In the text input field below you can enter any message to be confirmed with APC. This allows to test and identify edge cases. The text should not exceed 420 characters. Emojis and special character sets are not supported. \"New lines\" and \"carriage return\" are not supported by all releases. If supported, the number of \"new lines\" should not exceed the screen size. The text has to fit on the TUI screen. Find more edge cases 😁. Happy testing.</string>
    <string name="free_text">Enter free text to be confirmed below:</string>
    <string name="action_apc_test">Confirm Free Text Message</string>
    <string name="trusted_confirmation_required">Trusted Confirmation Required</string>
    <string name="unlocked_device_required">Unlocked Device Required</string>
    <string name="choose_between_rsa_ec">Choose between EC or RSA</string>
    <string name="choose_ec_type">Choose from one of the supported EC Types</string>
    <string name="elliptic_curve_type">Elliptic Curve Type</string>
    <string name="choose_rsa_length">Choose the RSA key length in bits</string>
    <string name="keys_in_hw">Keys in Hardware (Strong Box)</string>
    <string name="choose_hw_keys">Choose to generate the key in HW if available.</string>
    <string name="user_authentication_required">User Authentication Required</string>
    <string name="user_has_to_authenticate">The user has to authenticate for each key operation.</string>
    <string name="device_has_to_be_unlocked">The device has to be unlocked for any key operation.</string>
    <string name="keys_only_for_trusted_confirmation">Keys can only be used with Android Protected Confirmation. (This has always to be true for APC operations.)</string>
    <string name="validity_period_for_cert">The validity period is used to calculate the validity dates (not after date) in the certificate.</string>
</resources>