<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/description"
            android:text="@string/description_key_gen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/key_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_key_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox android:id="@+id/checkbox_hw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_in_hw" />

        <CheckBox android:id="@+id/checkbox_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biometric_auth" />

        <CheckBox android:id="@+id/checkbox_unlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_unlocked" />

        <CheckBox android:id="@+id/checkbox_apc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_for_apc"
            android:checked="true"
            android:clickable="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_key_type"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/key_type_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elliptic_curve"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/key_attr_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cert_validity"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/cert_validity_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <TextView
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_challenge" />

        <EditText
            android:id="@+id/challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:enabled="false" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bfh_orange"
            android:text="@string/generate" />

    </LinearLayout>
</ScrollView>