<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".ApcTestFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/description"
            android:text="@string/description_sign_free_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="#c0c0c0"/>

        <TextView
            android:id="@+id/free_text"
            android:text="@string/free_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/apc_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="8" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bfh_orange"
            android:text="@string/confirm" />
        </LinearLayout>
</ScrollView>